Added army builder tests